<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".trsmis2.TrsmisActivity">

    <data>

        <variable
            name="viewModel"
            type="com.example.trsmis2.ui.viewmodel.TrsmisViewModel" />
        <variable
            name="date"
            type="String" />
        <variable
            name="team"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/sales_status_toolbar_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/sales_status_toolbar_view"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sales_status_toolBar_text"
                    style="@style/CustomTextViewEB"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolsBar_size"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/str_trsmis_toolbar"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/toolBar_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/sales_status_toolbar_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/sales_status_toolbar_view" />

                <ImageView
                    android:id="@+id/trsmis_write_image"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/toolsBar_size"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_write"
                    app:layout_constraintBottom_toBottomOf="@id/sales_status_toolbar_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/trsmis_back_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="24dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="@id/sales_status_toolbar_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/trsmis_date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/linear_border_round"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/trsmis_teamSelect_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sales_status_toolbar_cardView">


            <ImageView
                android:id="@+id/trsmis_left_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="11dp"
                android:paddingEnd="11dp"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:id="@+id/trsmis_date_text"
                style="@style/CustomTextViewR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:text="@{date}"
                android:textColor="@color/color888888"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/trsmis_right_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingStart="11dp"
                android:paddingEnd="11dp"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <TextView
            android:id="@+id/trsmis_teamSelect_text"
            style="@style/CustomTextViewR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="11dp"
            android:background="@drawable/linear_border_round"
            android:drawableEnd="@drawable/ic_triangle"
            android:drawablePadding="5dp"
            android:paddingStart="15dp"
            android:paddingTop="9dp"
            android:paddingEnd="10dp"
            android:paddingBottom="9dp"
            android:text="@{team}"
            android:textColor="@color/color888888"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/trsmis_date_layout"
            app:layout_constraintTop_toBottomOf="@id/sales_status_toolbar_cardView" />

        <LinearLayout
            android:id="@+id/trsmis_tag_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trsmis_date_layout">

            <TextView
                android:id="@+id/trsmis_id_text"
                style="@style/CustomTextViewR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/number"
                android:textColor="@color/color333333"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/trsmis_context_text"
                style="@style/CustomTextViewR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/group_trsmis_statusAndResult"
                android:textColor="@color/color333333"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/trsmis_prblmDlngStatNm_text"
                style="@style/CustomTextViewR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="6dp"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="9dp"
                android:paddingBottom="6dp"
                android:text="@string/status"
                android:textColor="@color/color333333"
                android:textSize="13dp" />

        </LinearLayout>


        <View
            android:id="@+id/trsmis_tag_bottom_line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trsmis_tag_layout" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trsmis_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:clipToPadding="false"
            android:paddingBottom="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trsmis_tag_bottom_line"
            tools:listitem="@layout/item_trsmis"/>

        <TextView
            android:id="@+id/empty_text"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_empty"
            android:text="@string/noResult"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:indeterminate="true"
            android:visibility="@{safeUnbox(viewModel.loading)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>